--- a/kadai_008修正/kadai_008.html
+++ b/kadai_008修正/kadai_008.html
@@ -15,22 +15,20 @@
       <a href="https://www.sejuku.net/">スポーツ</a>
       <a href="https://www.sejuku.net/">テクノロジー</a>
   </nav>
-　</header>
- 
+　</header> 
 <main>
   <article>
-    <section><h2>社会</h2>
- <h3>和菓子店も「トリックオアトリート！」</h3>
-  <p>日本でも年々人気の高まるハロウィン。<br>今年は大手和菓子店5社がハロウィン向けの和菓子セットを共同開発しました。</p>
-  <section><audio src="ichi.mp3" controls></audio></section>
-
- <section> <h3>私のおすすめ和菓子アンケートフォーム</h3>
+  <section> 
+    <h2>社会</h2> 
+ 　<h3>和菓子店も「トリックオアトリート！」</h3>
+  　<p>日本でも年々人気の高まるハロウィン。<br>今年は大手和菓子店5社がハロウィン向けの和菓子セットを共同開発しました。</p>
+ 　 <audio src="ichi.mp3" controls></audio>
   
+  <h3>私のおすすめ和菓子アンケートフォーム</h3>
    <form>
     <label>氏名</label>
    <input type="text" placeholder="名前を入力してください">
    <br>
-
    <label>年代</label>
    <select>
     <option>10代以下</option>
@@ -55,15 +53,14 @@
    <input type="submit" value="送信">
    <input type="reset" value="リセット">
   </form>
-  </section>
- </article>
- <article>
-<h2>テクノロジー</h2>
-<h3>SAMURAIが新しい動画をリリース</h3>
-
+ </section>
+ <section>
+　<h2>テクノロジー</h2>
+　<h3>SAMURAIが新しい動画をリリース</h3>
 <p>SAMURAI公式YouTubeで新しい動画がリリースされました。<br>
 動画の内容はHTML/CSSの解説です。</p>
 <iframe src="https://www.youtube.com/embed/2JLiGSUohEo?si=MZ4avL3fuBwzcjDa"></iframe> 
+ </section>
 </article>
 </main>
 
